--- a/TCC/AndroidManifest.xml
+++ b/TCC/AndroidManifest.xml
@@ -3,8 +3,9 @@
     package="br.usp.ime.tcc.activities"
     android:versionCode="1"
     android:versionName="1.0" >
-    
+
     <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
+    <uses-permission android:name="android.permission.CAMERA" />
 
     <uses-sdk
         android:minSdkVersion="8"
@@ -14,7 +15,7 @@
         android:allowBackup="true"
         android:icon="@drawable/ic_launcher"
         android:label="@string/app_name"
-        android:theme="@style/AppTheme" >
+        android:theme="@android:style/Theme.NoTitleBar.Fullscreen" >
         <activity
             android:name="br.usp.ime.tcc.activities.FilterActivity"
             android:label="@string/app_name" >
@@ -24,10 +25,15 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        
         <activity
             android:name="br.usp.ime.tcc.activities.FilteredImageActivity"
             android:label="@string/app_name" >
+        </activity>
+        <activity
+            android:name="br.usp.ime.tcc.activities.ContinousFilterActivity"
+            android:configChanges="keyboardHidden|orientation"
+            android:label="@string/app_name"
+            android:screenOrientation="landscape" >
         </activity>
     </application>
 
