Preparing activities for simulation filters

--- a/TCC/AndroidManifest.xml
+++ b/TCC/AndroidManifest.xml
@@ -26,7 +26,7 @@
             </intent-filter>
         </activity>
         <activity
-            android:name="br.usp.ime.tcc.activities.FilteredImageActivity"
+            android:name="br.usp.ime.tcc.activities.BitmapFilterActivity"
             android:label="@string/app_name" >
         </activity>
         <activity
