--- a/TCC/AndroidManifest.xml
+++ b/TCC/AndroidManifest.xml
@@ -17,13 +17,16 @@
         android:label="@string/app_name"
         android:theme="@android:style/Theme.NoTitleBar.Fullscreen" >
         <activity
-            android:name="br.usp.ime.tcc.activities.FilterActivity"
+            android:name="br.usp.ime.tcc.activities.MainActivity"
             android:label="@string/app_name" >
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
-
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
+        </activity>        
+        <activity
+            android:name="br.usp.ime.tcc.activities.FilterActivity"
+            android:label="@string/app_name" >
         </activity>
         <activity
             android:name="br.usp.ime.tcc.activities.BitmapFilterActivity"
