--- a/TCC/AndroidManifest.xml
+++ b/TCC/AndroidManifest.xml
@@ -25,7 +25,7 @@
             </intent-filter>
         </activity>        
         <activity
-            android:name="br.usp.ime.tcc.activities.FilterActivity"
+            android:name="br.usp.ime.tcc.activities.filter.FilterActivity"
             android:label="@string/app_name" >
         </activity>
         <activity
