--- a/TCC/AndroidManifest.xml
+++ b/TCC/AndroidManifest.xml
@@ -21,11 +21,24 @@
             android:label="@string/app_name" >
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
+
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
-        </activity>        
+        </activity>
         <activity
             android:name="br.usp.ime.tcc.activities.filter.FilterActivity"
+            android:label="@string/app_name" >
+        </activity>
+        <activity
+            android:name="br.usp.ime.tcc.activities.filter.ColorHighlightFilterActivity"
+            android:label="@string/app_name" >
+        </activity>
+        <activity
+            android:name="br.usp.ime.tcc.activities.filter.SimulationFilterActivity"
+            android:label="@string/app_name" >
+        </activity>
+        <activity
+            android:name="br.usp.ime.tcc.activities.filter.VisocorFilterActivity"
             android:label="@string/app_name" >
         </activity>
         <activity
