Added color picker button call to Color Picker Activity and created layout for Color Picker Activity.

--- a/TCC/AndroidManifest.xml
+++ b/TCC/AndroidManifest.xml
@@ -46,6 +46,10 @@
             android:label="@string/app_name" >
         </activity>
         <activity
+            android:name="br.usp.ime.tcc.activities.ColorPickerActivity"
+            android:label="@string/app_name" >
+        </activity>
+        <activity
             android:name="br.usp.ime.tcc.activities.ContinousFilterActivity"
             android:configChanges="keyboardHidden|orientation"
             android:label="@string/app_name"
