--- a/TCC/project.properties
+++ b/TCC/project.properties
@@ -13,3 +13,4 @@
 # Project target.
 target=android-17
 android.library.reference.1=../../OpenCV-2.4.5-android-sdk/sdk/java
+android.library.reference.2=../../JakeWharton-ActionBarSherlock-5a15d92/actionbarsherlock
