--- a/TCC/AndroidManifest.xml
+++ b/TCC/AndroidManifest.xml
@@ -16,6 +16,7 @@
         android:icon="@drawable/ic_launcher"
         android:label="@string/app_name"
         android:theme="@android:style/Theme.NoTitleBar.Fullscreen" >
+        
         <activity
             android:name="br.usp.ime.tcc.activities.MainActivity"
             android:label="@string/app_name" >
@@ -25,34 +26,66 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
+        
         <activity
             android:name="br.usp.ime.tcc.activities.filter.FilterActivity"
-            android:label="@string/app_name" >
+            android:label="@string/app_name"
+            android:parentActivityName="br.usp.ime.tcc.activities.MainActivity">
+            <meta-data
+                android:name="android.support.PARENT_ACTIVITY"
+                android:value="br.usp.ime.tcc.activities.MainActivity" />
         </activity>
+        
         <activity
             android:name="br.usp.ime.tcc.activities.filter.ColorHighlightFilterActivity"
-            android:label="@string/color_highlight" >
+            android:label="@string/color_highlight"
+            android:parentActivityName="br.usp.ime.tcc.activities.MainActivity">
+            <meta-data
+                android:name="android.support.PARENT_ACTIVITY"
+                android:value="br.usp.ime.tcc.activities.MainActivity" />
         </activity>
+        
         <activity
             android:name="br.usp.ime.tcc.activities.filter.SimulationFilterActivity"
-            android:label="@string/simulation_filter" >
+            android:label="@string/simulation_filter"
+            android:parentActivityName="br.usp.ime.tcc.activities.MainActivity">
+            <meta-data
+                android:name="android.support.PARENT_ACTIVITY"
+                android:value="br.usp.ime.tcc.activities.MainActivity" />
         </activity>
+        
         <activity
             android:name="br.usp.ime.tcc.activities.filter.VisocorFilterActivity"
-            android:label="@string/visocor_filter" >
+            android:label="@string/visocor_filter"
+            android:parentActivityName="br.usp.ime.tcc.activities.MainActivity">
+            <meta-data
+                android:name="android.support.PARENT_ACTIVITY"
+                android:value="br.usp.ime.tcc.activities.MainActivity" />
         </activity>
+        
         <activity
             android:name="br.usp.ime.tcc.activities.BitmapFilterActivity"
             android:label="@string/app_name" >
         </activity>
+        
         <activity
             android:name="br.usp.ime.tcc.activities.ColorPickerActivity"
-            android:label="@string/color_picker" >
+            android:label="@string/color_picker"
+            android:parentActivityName="br.usp.ime.tcc.activities.settings.SettingsActivity">
+            <meta-data
+                android:name="android.support.PARENT_ACTIVITY"
+                android:value="br.usp.ime.tcc.activities.settings.SettingsActivity" />
         </activity>
+        
         <activity
             android:name="br.usp.ime.tcc.activities.settings.SettingsActivity"
-            android:label="@string/settings" >
+            android:label="@string/settings"
+            android:parentActivityName="br.usp.ime.tcc.activities.MainActivity">
+            <meta-data
+                android:name="android.support.PARENT_ACTIVITY"
+                android:value="br.usp.ime.tcc.activities.MainActivity" />
         </activity>
+        
         <activity
             android:name="br.usp.ime.tcc.activities.ContinousFilterActivity"
             android:configChanges="keyboardHidden|orientation"
