--- a/TCC/AndroidManifest.xml
+++ b/TCC/AndroidManifest.xml
@@ -64,7 +64,22 @@
         </activity>
         
         <activity
-            android:name="br.usp.ime.tcc.activities.BitmapFilterActivity"
+            android:name="br.usp.ime.tcc.activities.filter.bitmap.BitmapFilterActivity"
+            android:label="@string/app_name" >
+        </activity>
+        
+        <activity
+            android:name="br.usp.ime.tcc.activities.filter.bitmap.VisocorBitmapFilterActivity"
+            android:label="@string/app_name" >
+        </activity>
+        
+        <activity
+            android:name="br.usp.ime.tcc.activities.filter.bitmap.ColorHighlightBitmapFilterActivity"
+            android:label="@string/app_name" >
+        </activity>
+        
+        <activity
+            android:name="br.usp.ime.tcc.activities.filter.bitmap.SimulationBitmapFilterActivity"
             android:label="@string/app_name" >
         </activity>
         
