--- a/TCC/AndroidManifest.xml
+++ b/TCC/AndroidManifest.xml
@@ -84,12 +84,21 @@
         </activity>
         
         <activity
-            android:name="br.usp.ime.tcc.activities.ColorPickerActivity"
+            android:name="br.usp.ime.tcc.activities.colorpicker.SettingsColorPickerActivity"
             android:label="@string/color_picker"
             android:parentActivityName="br.usp.ime.tcc.activities.settings.SettingsActivity">
             <meta-data
                 android:name="android.support.PARENT_ACTIVITY"
                 android:value="br.usp.ime.tcc.activities.settings.SettingsActivity" />
+        </activity>
+        
+        <activity
+            android:name="br.usp.ime.tcc.activities.colorpicker.ImageColorPickerActivity"
+            android:label="@string/color_picker"
+            android:parentActivityName="br.usp.ime.tcc.activities.filter.bitmap.ColorHighlightBitmapFilterActivity">
+            <meta-data
+                android:name="android.support.PARENT_ACTIVITY"
+                android:value="br.usp.ime.tcc.activities.filter.bitmap.ColorHighlightBitmapFilterActivity" />
         </activity>
         
         <activity
