--- a/TCC/AndroidManifest.xml
+++ b/TCC/AndroidManifest.xml
@@ -111,7 +111,7 @@
         </activity>
         
         <activity
-            android:name="br.usp.ime.tcc.activities.ContinousFilterActivity"
+            android:name="br.usp.ime.tcc.activities.filter.continous.ContinousFilterActivity"
             android:configChanges="keyboardHidden|orientation"
             android:label="@string/app_name"
             android:screenOrientation="landscape" >
