--- a/TCC/AndroidManifest.xml
+++ b/TCC/AndroidManifest.xml
@@ -16,7 +16,6 @@
         android:icon="@drawable/ic_launcher"
         android:label="@string/app_name"
         android:theme="@android:style/Theme.NoTitleBar.Fullscreen" >
-        
         <activity
             android:name="br.usp.ime.tcc.activities.MainActivity"
             android:label="@string/color_blindness_accessibility_toolkit" >
@@ -26,92 +25,94 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        
         <activity
             android:name="br.usp.ime.tcc.activities.filter.FilterActivity"
             android:label="@string/app_name"
-            android:parentActivityName="br.usp.ime.tcc.activities.MainActivity">
+            android:parentActivityName="br.usp.ime.tcc.activities.MainActivity" >
             <meta-data
                 android:name="android.support.PARENT_ACTIVITY"
                 android:value="br.usp.ime.tcc.activities.MainActivity" />
         </activity>
-        
         <activity
             android:name="br.usp.ime.tcc.activities.filter.ColorHighlightFilterActivity"
             android:label="@string/color_highlight"
-            android:parentActivityName="br.usp.ime.tcc.activities.MainActivity">
+            android:parentActivityName="br.usp.ime.tcc.activities.MainActivity" >
             <meta-data
                 android:name="android.support.PARENT_ACTIVITY"
                 android:value="br.usp.ime.tcc.activities.MainActivity" />
         </activity>
-        
         <activity
             android:name="br.usp.ime.tcc.activities.filter.SimulationFilterActivity"
             android:label="@string/simulation_filter"
-            android:parentActivityName="br.usp.ime.tcc.activities.MainActivity">
+            android:parentActivityName="br.usp.ime.tcc.activities.MainActivity" >
             <meta-data
                 android:name="android.support.PARENT_ACTIVITY"
                 android:value="br.usp.ime.tcc.activities.MainActivity" />
         </activity>
-        
         <activity
             android:name="br.usp.ime.tcc.activities.filter.VisocorFilterActivity"
             android:label="@string/visocor_filter"
-            android:parentActivityName="br.usp.ime.tcc.activities.MainActivity">
+            android:parentActivityName="br.usp.ime.tcc.activities.MainActivity" >
             <meta-data
                 android:name="android.support.PARENT_ACTIVITY"
                 android:value="br.usp.ime.tcc.activities.MainActivity" />
         </activity>
-        
         <activity
             android:name="br.usp.ime.tcc.activities.filter.bitmap.BitmapFilterActivity"
             android:label="@string/app_name" >
         </activity>
-        
         <activity
             android:name="br.usp.ime.tcc.activities.filter.bitmap.VisocorBitmapFilterActivity"
             android:label="@string/app_name" >
         </activity>
-        
         <activity
             android:name="br.usp.ime.tcc.activities.filter.bitmap.ColorHighlightBitmapFilterActivity"
             android:label="@string/app_name" >
         </activity>
-        
         <activity
             android:name="br.usp.ime.tcc.activities.filter.bitmap.SimulationBitmapFilterActivity"
             android:label="@string/app_name" >
         </activity>
-        
         <activity
             android:name="br.usp.ime.tcc.activities.colorpicker.SettingsColorPickerActivity"
             android:label="@string/color_picker"
-            android:parentActivityName="br.usp.ime.tcc.activities.settings.SettingsActivity">
+            android:parentActivityName="br.usp.ime.tcc.activities.settings.SettingsActivity" >
             <meta-data
                 android:name="android.support.PARENT_ACTIVITY"
                 android:value="br.usp.ime.tcc.activities.settings.SettingsActivity" />
         </activity>
-        
         <activity
             android:name="br.usp.ime.tcc.activities.colorpicker.ImageColorPickerActivity"
             android:label="@string/color_picker"
-            android:parentActivityName="br.usp.ime.tcc.activities.filter.bitmap.ColorHighlightBitmapFilterActivity">
+            android:parentActivityName="br.usp.ime.tcc.activities.filter.bitmap.ColorHighlightBitmapFilterActivity" >
             <meta-data
                 android:name="android.support.PARENT_ACTIVITY"
                 android:value="br.usp.ime.tcc.activities.filter.bitmap.ColorHighlightBitmapFilterActivity" />
         </activity>
-        
         <activity
             android:name="br.usp.ime.tcc.activities.settings.SettingsActivity"
             android:label="@string/settings"
-            android:parentActivityName="br.usp.ime.tcc.activities.MainActivity">
+            android:parentActivityName="br.usp.ime.tcc.activities.MainActivity" >
             <meta-data
                 android:name="android.support.PARENT_ACTIVITY"
                 android:value="br.usp.ime.tcc.activities.MainActivity" />
         </activity>
-        
         <activity
             android:name="br.usp.ime.tcc.activities.filter.continous.ContinousFilterActivity"
+            android:configChanges="keyboardHidden|orientation"
+            android:label="@string/app_name"
+            android:screenOrientation="landscape" >
+        </activity>
+        
+        <activity
+            android:name="br.usp.ime.tcc.activities.filter.continous.VisocorContinousFilterActivity"
+            android:configChanges="keyboardHidden|orientation"
+            android:label="@string/app_name"
+            android:screenOrientation="landscape" >
+        </activity>
+        
+        <activity
+            android:name="br.usp.ime.tcc.activities.filter.continous.SimulationContinousFilterActivity"
             android:configChanges="keyboardHidden|orientation"
             android:label="@string/app_name"
             android:screenOrientation="landscape" >
